objects/Veda_Comprehensive_default__c.object
<CustomObject>
    <fields>
        <fullName>DefaultReasonToReportCurrencyCode__c</fullName>
        <label>DefaultReasonToReportCurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Amount_Currency_Code__c</fullName>
        <label>Default Amount Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Date_Recorded__c</fullName>
        <label>Default Date Recorded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_DefaultAmount__c</fullName>
        <label>Default DefaultAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Reason_To_Report__c</fullName>
        <label>Default Reason To Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Account</label>
        <referenceTo>Veda_Account__c</referenceTo>
        <relationshipLabel>VedaComprehensivedefaults</relationshipLabel>
        <relationshipName>VedaComprehensivedefaults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>originalDefaultAmountCurrencyCode__c</fullName>
        <label>originalDefaultAmountCurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_Default_Date_Recorded__c</fullName>
        <label>original Default Date Recorded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_Default_DefaultAmount__c</fullName>
        <label>original Default DefaultAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reasonToReport__c</fullName>
        <label>reasonToReport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason_To_ReportCode__c</fullName>
        <label>reason To ReportCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reason_To_Report_Code__c</fullName>
        <label>reason To Report Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_Code__c</fullName>
        <label>status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_Date__c</fullName>
        <label>status Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Comprehensive default</label>
    <nameField>
        <label>Veda Comprehensive default Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VedaComprehensivedefaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>